Year Group Management
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
@@ -515,3 +515,8 @@ Available to Roles: Available to Roles
 role_multiple_select: 'Controls who can use this code.<br/>Use Control, Command and/or Shift to select multiple.'
 Edit Attendance Code: Edit Attendance Code
 Edit Individual Need: Edit Individual Need
+Edit Year Group: Edit Year Group
+Head of Year: Head of Year
+Manage Year Groups: Manage Year Groups
+Must be unique. Controls chronological ordering: Must be unique. Controls chronological ordering
+Top of List: Top of List
