--- a/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
@@ -568,3 +568,12 @@ Manage External Assessments: Manage External Assessments
 Primary External Assessment: Primary External Assessment
 Submit Internal Assessment Settings: Submit Internal Assessment Settings
 Submit Primary External Assessment: Submit Primary External Assessment
+Add External Assessment: Add External Assessment
+Allow File Upload: Allow File Upload
+Assessment field for - {name}: Assessment field for - {name}
+Brief description of assessment and how it is used.: Brief description of assessment and how it is used.
+Edit External Assessment: Edit External Assessment
+Edit field: Edit field
+Fields: Fields
+Manage Assessment Fields for {name}: Manage Assessment Fields for {name}
+Should the student record include the option of a file upload?: Should the student record include the option of a file upload?
