Language Management French Language Build
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.en_GB.yaml
@@ -1,5 +1,4 @@
-
-'Student computers': "{count, plural,
+Student computers: "{count, plural,
         one   {# student computer}
         other   {# student computers}
     }"
