--- a/src/Resources/translations/SchoolAdmin+intl-icu.it_IT.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.it_IT.yaml
@@ -285,7 +285,7 @@ activitysettingstype:
         competitive: Competitivo
         selection: Selezione
     activities__datetype:
-        date: Data
+        date: Dati
         term: Semestre
     activities__access:
         none: Nessuno
