--- a/src/Resources/translations/SchoolAdmin+intl-icu.sq_AL.yaml
+++ b/src/Resources/translations/SchoolAdmin+intl-icu.sq_AL.yaml
@@ -285,7 +285,7 @@ activitysettingstype:
         competitive: 'Konkurrues '
         selection: 'Seleksionim '
     activities__datetype:
-        date: Data
+        date: 'Data '
         term: Termi
     activities__access:
         none: 'Asnjë '
